src/styles/buildingBlocks.styl
body
    display flex
    flex-flow column nowrap
    min-height 100%
    & > .main
        flex 1 0 auto
footer
    flex 0 0 auto

.blue
    color white
.white
    color text

section
    background white
    &.blue
        background act
        &.waves
            background-image url(/img/SmallWavesTop.svg),  url(/img/SmallWavesBottom.svg)
            background-size 105% auto, 105% auto
            background-position center -2px, center 100.25% // so that there are no tiny gaps in the texture
            background-repeat no-repeat, no-repeat
            padding 4.7% 0 5.1%
        &.wavestop
            background-image url(/img/SmallWavesTop.svg)
            background-size 105% auto
            background-position center -2px // so that there are no tiny gaps in the texture
            background-repeat no-repeat
            padding 4.7% 0 2.4%
        &.wavesbottom
            background-image url(/img/SmallWavesBottom.svg)
            background-size 105% auto
            background-position center 100.25% // so that there are no tiny gaps in the texture
            background-repeat no-repeat
            padding 2.55% 0 5.1%
        &.gradient
            background linear-gradient(45deg, accent1 0, act 100%)
            &.waves
                background-image url(/img/SmallWavesTop.svg),  url(/img/SmallWavesBottom.svg), linear-gradient(45deg, accent1 0, act 100%)
                background-size 105% auto, 105% auto, auto auto
                background-position center -2px, center 100.25%, center center // so that there are no tiny gaps in the texture
                background-repeat no-repeat, no-repeat
            &.wavestop
                background-image url(/img/SmallWavesTop.svg), linear-gradient(45deg, accent1 0, act 100%)
                background-size 105% auto
                background-position center -2px, center center // so that there are no tiny gaps in the texture
                background-repeat no-repeat
            &.wavesbottom
                background-image url(/img/SmallWavesBottom.svg), linear-gradient(45deg, accent1 0, act 100%)
                background-size 105% auto
                background-position center 100.25%, center center // so that there are no tiny gaps in the texture
                background-repeat no-repeat
        &.gradAlt
            background linear-gradient(45deg, act 0, accent1 100%)
    &.grey
        background bl
    padding 3rem 2rem
    &.intro
        padding 6rem 2rem
    @media (max-width: 640px)
        padding 3rem 1rem
        &.intro
            padding 6rem 1rem
#footer
    @extends section
    padding 1rem
    background dark
    color lighten(dark, 60%)
.inner
    max-width 1140px
    margin 0 auto
    padding 0 2rem
    &.limited
        max-width 720px
nav
    position fixed
    background act
    top 0
    left 0
    right 0
    padding 0.75rem 6rem
    @media (max-width 960px)
        padding 0.75rem 1.5rem
    color white
    z-index 999
    line-height 0
    display flex
    flex-flow row nowrap
    justify-content space-between
    & > :first-child
        flex 0 0 auto
        margin-inline-end 1rem
    {trans}
    &.above
        background transparent
    img
        height 2.75rem
        {trans}
    .navItems a
        padding 0.5rem 0
    &.below
        img
            height 2rem
        .navItems a
            padding 0.25rem 0
nav, #footer
    a, .a
        text-decoration none
        cursor pointer
        display inline-block
        .icon, .feather
            color white
        &:hover
            color white
            opacity 0.65
nav
    a, .a
        margin-inline-end 2rem
        &:last-child
            margin-inline-end 0
#footer
    a, .a
        color white
.aCardList
    display flex
    flex-flow row
    align-items center
.aCard
    background white
    {shad}
    padding 2rem 1.5rem
    margin 1rem 0
    border-radius brsmall
    {trans}
    &:hover
        {shadamb}
    .blue &
        color text
        h1, h2, h3, h4, h5, h6
            color accent1
.aCardMedia
    margin -1rem -1.5rem 1rem
    position relative
    img
        {trans}
        opacity 1
        width 100%
        border-radius brsmall brsmall 0 0
    .aCard:hover &
        button, .button
            opacity 1
        img
            opacity 0.65
.aCardButton
    display flex
    justify-content center
    align-items center
    width 100%
    height 100%
    left 0
    top 0
    position absolute
    button, .button
        opacity 0

.anEssencialsList
    display flex
    flex-flow row wrap

.anEssencial
    display flex
    flex-flow row nowrap
    .anEssencialsList.split &
        flex-flow column nowrap
        text-align center
        align-items center
    align-items top
    padding 2rem 1rem
    p
        font-size 1.5rem
        line-height 1.5
        margin 0
        margin-inline-start 1.5rem
    .feather, .icon
        flex 0 0 auto
        font-size 4rem
        stroke-width 1
        color accent1
        margin-inline-end 0
        .blue &
            color white

.ColorCards, .AssetCards
    margin 1rem -1rem
    display flex
    flex-flow row wrap
    .clear
        flex-basis 100%
        height 0
.aColorCard, .anAssetCard
    @extends .aCard
    margin 0 1rem 2rem
    flex 1 1 1rem
.anAssetCard
    img
        border-radius brsmall
        max-height 16rem
.anAssetCard.aScreenshot
    img
        max-height unset
.aColorCard
    @extends .aCard
    .aColor
        height 8rem
        border-radius brsmall
        margin -1.5rem -1rem 1rem

.ShareButtons
    padding 2rem 0 0
    a
        display inline-block
        background linear-gradient(45deg, accent1 0, act 100%)
        padding 0.75rem
        border-radius br
        line-height 0
        & + a
            margin-inline-start 1rem
        {trans}
        &:hover
            opacity 0.65
    img
        width 3rem
        height 3rem

.aDevlogPost + .aDevlogPost
    margin-top 3rem
.aPostImage img
    border-radius brsmall

.aLabel
    display inline-block
    padding 0 0.75rem
    background act
    border-radius 1rem
    margin 0.5rem 0.5rem 0 0
    color white

.aNiceTable
    background white
    border-radius 1rem
    color text
    border-spacing 0
    width 100%
    {shadamb}
    tr
        td, th
            border-bottom 1px solid bl
        &:last-child
            td, th
                border-bottom 0 none
    td, th
        border-inline-end 1px solid bl
        vertical-align baseline
        &:last-child
            border-inline-end 0 none
            padding 0.5rem 1.5rem 0.5rem
            padding-inline-start 1rem
        &:first-child
            padding 0.5rem 1.5rem 0.5rem
            padding-inline-end 1rem
        padding 0.5rem 1rem
    th
        padding-top 0.75rem
        padding-bottom 0.75rem
        color accent1
        font-size 85%
        text-transform uppercase
        letter-spacing 1.5px
        svg
            vertical-align -4px

#patrons
    h1, h2
        margin-top 0
    h2
        font-size 2.5rem

.aPatronList
    display flex
    flex-flow row wrap
    gap 0.75rem
    align-items baseline
    justify-content center

.aPatron
    width 6rem
    img
        border-radius 100%
        width 5.5rem
        height @width
    .smaller &
        width 5rem
        img
            width 4.5rem
            height @width

